--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
 	<title>index.html</title>
-	<style> 	
+	<style>
 		.topnav {
 		  overflow: hidden;
 			background-color: #59022B;
+			display: flex;
+			justify-content: flex-end;
+			
 		}
-		.topnav a {
-		  float: right;
+		.topnav a {	
 		  text-align: center;
-		  padding: 14px 16px;
+		  padding: 14px 12px;
 		  font-size: 12px;
-			font-family: sans-serif;
-			color: white;
+		  font-family: sans-serif;
+		  color: white;
 		}
 		.nav-el {
 			width: 50px;
@@ -36,25 +38,32 @@
 		#intro-flex {
 			display: flex;
 			justify-content: space-around;
-			@media only screen and (max-width: 600px) {
-				flex-wrap: wrap; 
-				background-color: lightblue;
+		}
+		@media (max-width : 600px ){
+			#intro-flex {
+				flex-wrap: wrap;
+			}
+			.topnav {
+				justify-content: space-around;
 			}
 		}
 		#intro-para {
 			height: 300px;
 			font-family: 'Major Mono Display', monospace;
+			display: block;
+			height: auto;
+			max-width: 100%;
 		}
 		#freddie {
 			padding: 10px;
 			height: 300px;
 		}
-		
+
 	</style>
 </head>
 
 <body>
-	
+
 <div class="topnav">
   <a href="#codewars"><img class = "nav-el" id = "codewars" src = "images/codewars.png" alt = "Codewars"></a>
   <a href="#codepen"><img class = "nav-el" id = "codepen" src = "images/codepen.png" alt = "Codepen"></a>
@@ -63,7 +72,7 @@
 </div>
 
 <div id = "intro-flex">
-	<img id = "freddie" width = 300px height = 300px src = "images/freddie.png" alt = "Picture of Freddie">
+	<img id = "freddie" width = "300px" height = "300px" src = "images/freddie.png" alt = "Picture of Freddie">
 	<p id = "intro-para"> "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
 	</div>
 </body>
