Hotfix attempt: white space
Attempt to fix white space at top of page, above and to the left of the navbar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
@@ -11,8 +12,10 @@
 			display: flex;
 			justify-content: flex-end;
 			position: fixed;
-			width: 100%;
+			width: 100vw;
 			top: 0;
+			left: 0;
+			right: 0;
 			
 		}
 		.topnav a {	
@@ -25,6 +28,9 @@
 		.nav-el {
 			width: 50px;
 			height: 50px;
+		}
+		#github {
+			padding-right: 10px;
 		}
 		#codewars:hover {
 			content: url("images/codewars2.png");
@@ -47,7 +53,6 @@
 			font-family: 'Major Mono Display', monospace;
 			display: block;
 			height: auto;
-			max-width: 100%;
 			padding: 74px 0px 0px 0px;
 		}
 		#freddie {
