Attempt to stretch image on mobile devices

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 			.topnav {
 				justify-content: space-around;
 			}
+			#freddie {
+				width: 100vw;
+			}
 			#intro-para {
 				padding: 5px;
 			}
