--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		}
 		
 		
-		@media only screen and (min-device-width : 320px) and (max-device-width : 480px)  {
+		@media only screen and (min-device-width : 320px)  {
 			#blank {
 				height: 20vw;
 			}
@@ -87,7 +87,7 @@
 			#freddie {
 				width: 80vw;
 				height: 80vw;
-				padding-bottom: 0px;
+				padding-top: 20px;
 			}
 		}
 	
