--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		}
 		
 		
-		@media only screen and (min-device-width : 320px)  {
+		@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 			#blank {
 				height: 20vw;
 			}
