--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 		#intro-para {
 			height: 300px;
 			font-family: 'Major Mono Display', monospace;
+			font-size: 1.5vw;
 			display: block;
 			height: auto;
 			padding: 10px;
@@ -83,6 +84,9 @@
 			}
 			#intro-flex {
 				flex-wrap: wrap;
+			}
+			#intro-para {
+				font-size: 3.5vw;
 			}
 			#freddie {
 				width: 80vw;
