--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html>
- <!-- Make navbar have its own padding - Yes? -->
-<!-- Make icons grow on mobile - Yes? -->
-<!-- Make navbar grow on mobile - Yes? -->
-	<!-- Copy in: and (max-device-width : 480px) --> 
+ <!-- Make image adjust along with text relative to viewport -->
+	<!-- Make photo and navbar in landscape mode take up less space -->
 <head>
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
@@ -54,19 +52,20 @@
 		#intro-flex {
 			display: flex;
 			justify-content: space-around;
+			font-size: 2vw;
 		}
 		#intro-para {
 			height: 300px;
 			font-family: 'Major Mono Display', monospace;
-			font-size: 1.5vw;
+			font-size: 1em;
 			display: block;
 			height: auto;
 			padding: 10px;
 		}
 		#freddie {
 			padding: 10px 10px 10px 10px;
-			height: 300px;
-			width: 300px;
+			height: 20em;
+			width: 20em;
 		}
 		
 		
@@ -79,19 +78,20 @@
 				height: 20vw;
 			}
 			.nav-el {
-			width: 12vw;
-			height: 12vw;
+				width: 12vw;
+				height: 12vw;
 			}
 			#intro-flex {
 				flex-wrap: wrap;
 			}
 			#intro-para {
-				font-size: 3.5vw;
+				font-size: 2.5em;
+				padding: 0px
 			}
 			#freddie {
 				width: 80vw;
 				height: 80vw;
-				padding-top: 20px;
+				padding-bottom: 0px;
 			}
 		}
 	
@@ -110,7 +110,7 @@
 
 <div id = "intro-flex">
 	<img id = "freddie" src = "images/freddie.png" alt = "Picture of Freddie">
-	<p id = "intro-para"> "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+	<p id = "intro-para"> "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
 	</div>
 
 </body>
