Tweaked the DOM to change image width
A possible workaround to fix 'Issue 1: image of me loads with no width', which is still present.

--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
 	
 <script>
 	var picture = document.getElementById("freddie");
-  	window.addEventListener("load", function(event) {
-    picture.style.visibility = "visible";
+  		window.addEventListener("load", function(event) {
+	picture.style.width = "20em";
+    picture.style.visibility = "visible";	
   });
 </script>	
 	
