Hopefully fixes overlap issue in Safari

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 			justify-content: space-around;
 			font-size: 2vw;
 			overflow: hidden;
+			flex: 0 1 auto;
 		}
 		#freddie-flex {
 			padding: 10px 10px 10px 10px;
@@ -63,6 +64,7 @@
 			display: block;
 			max-width: 480px;
 			max-height: 480px;
+			flex: 0 1 auto;
 		}
 		#para-flex {
 			font-family: 'Major Mono Display', monospace;
