Image width fixed: Safari Flexbox issues

--- a/index.html
+++ b/index.html
@@ -55,23 +55,19 @@
 			justify-content: space-around;
 			font-size: 2vw;
 			overflow: hidden;
-			flex: 0 1 auto;
 		}
 		#freddie-flex {
 			padding: 10px 10px 10px 10px;
 			height: 20em;
 			width: 20em;
-			display: block;
 			max-width: 480px;
 			max-height: 480px;
-			flex: 0 1 auto;
 		}
 		#para-flex {
 			font-family: 'Major Mono Display', monospace;
 			font-size: 1em;
 			padding: 10px;
 			margin: 0px;
-			display: block;
 		}
 		#freddie {
 			height: 100%;
@@ -122,10 +118,10 @@
 </div>
 
 <div id = "intro-flex">
-	<div id = "freddie-flex"> 
+	<div id = "freddie-flex" display = "block"> 
 		<img id = "freddie" src = "images/freddie.png" alt = "Picture of Freddie">
 	</div>
-	<div id = "para-flex">
+	<div id = "para-flex" display = "block">
 		<p id = "intro-para"> "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
 	</div>
 </div>
