Links open in new pages

--- a/index.html
+++ b/index.html
@@ -332,9 +332,9 @@
 	
 <div class="topnav">
 	
-<a href="https://www.freecodecamp.org/fweddi"><img id = "fcc" class = "nav-el" src = "images/freecodecamp.png" alt = "FreeCodeCamp"></a>
-<a href="https://www.codewars.com/users/Fweddi"><img class = "nav-el" id = "codewars" src = "images/codewars.png" alt = "Codewars"></a>
-<a href="https://github.com/Fweddi/fweddi.github.io"><img id = "github" class = "nav-el" src = "images/github.png" alt = "GitHub"></a>
+<a href="https://www.freecodecamp.org/fweddi" target="_blank"><img id = "fcc" class = "nav-el" src = "images/freecodecamp.png" alt = "FreeCodeCamp"></a>
+<a href="https://www.codewars.com/users/Fweddi" target="_blank"><img class = "nav-el" id = "codewars" src = "images/codewars.png" alt = "Codewars"></a>
+<a href="https://github.com/Fweddi/fweddi.github.io" target="_blank"><img id = "github" class = "nav-el" src = "images/github.png" alt = "GitHub"></a>
 <a href="#codepen"><img class = "nav-el" id = "codepen" src = "images/codepen.png" alt = "Codepen"></a>
 	
 </div>
