--- a/index.html
+++ b/index.html
@@ -317,6 +317,9 @@
 				font-size: 2.5em;
 				padding: 0px;
 			}
+			.text-box {
+				width: 80vw;
+			}
 			
 			
 		}
@@ -335,7 +338,7 @@
 <a href="https://www.freecodecamp.org/fweddi" target="_blank"><img id = "fcc" class = "nav-el" src = "images/freecodecamp.png" alt = "FreeCodeCamp"></a>
 <a href="https://www.codewars.com/users/Fweddi" target="_blank"><img class = "nav-el" id = "codewars" src = "images/codewars.png" alt = "Codewars"></a>
 <a href="https://github.com/Fweddi/fweddi.github.io" target="_blank"><img id = "github" class = "nav-el" src = "images/github.png" alt = "GitHub"></a>
-<a href="#codepen"><img class = "nav-el" id = "codepen" src = "images/codepen.png" alt = "Codepen"></a>
+<a href="https://codepen.io/fweddi/full/PXOEvj" target="_blank"><img class = "nav-el" id = "codepen" src = "images/codepen.png" alt = "Codepen"></a>
 	
 </div>
 
