Test: no fade on mobile

--- a/index.html
+++ b/index.html
@@ -320,6 +320,21 @@
 			.text-box {
 				width: 80vw;
 			}
+			#box {
+			opacity: 1;
+			}
+			#box2 {
+			opacity: 1;
+			}
+			#box3 {
+			opacity: 1;
+			}
+			#box4 {
+			opacity: 1;
+			}
+			#box5 {
+			opacity: 1;
+			}
 			
 			
 		}
