Test 2: removed fade and backgrounds on mobile

--- a/index.html
+++ b/index.html
@@ -335,8 +335,44 @@
 			#box5 {
 			opacity: 1;
 			}
-			
-			
+			#box6 {
+			opacity: 1;
+			}
+			#box7 {
+			opacity: 1;
+			}
+			#box8 {
+			opacity: 1;
+			}
+			#box9 {
+			opacity: 1;
+			}
+			#box10 {
+			opacity: 1;
+			}
+			#box11 {
+			opacity: 1;
+			}
+			#box12 {
+			opacity: 1;
+			}
+			#box13 {
+			opacity: 1;
+			}
+			#box14 {
+			opacity: 1;
+			}
+			#box15 {
+			opacity: 1;
+			}
+			#quote-flex1 {
+			background-image: none;
+			}
+			#quote-flex2 {
+			background-image: none;
+			}
+			#quote-flex3 {
+			background-image: none;
 		}
 	</style>
 	
