--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 				width: 80vw;
 				height: 80vw;
 				padding-bottom: 20px;
-				padding-top: 20px;
+				padding-top: 25px;
 			}
 			#intro-para {
 				font-size: 2.5em;
@@ -373,7 +373,19 @@
 			}
 			#quote-flex3 {
 			background-image: none;
-		}
+			}
+			.text-box {
+			margin: 5vw 0px;
+    		font-size: 2.5vw;
+			}
+			.text-box2 {
+			margin: 5vw 0px;
+    		font-size: 2.5vw;
+			}
+			.text-box3 {
+			margin: 5vw 0px;
+    		font-size: 2.5vw;
+			}
 	</style>
 	
 	
