--- a/index.html
+++ b/index.html
@@ -311,14 +311,11 @@
 				width: 80vw;
 				height: 80vw;
 				padding-bottom: 20px;
-				padding-top: 25px;
+				padding-top: 30px;
 			}
 			#intro-para {
 				font-size: 2.5em;
 				padding: 0px;
-			}
-			.text-box {
-				width: 80vw;
 			}
 			#box {
 			opacity: 1;
@@ -377,14 +374,23 @@
 			.text-box {
 			margin: 5vw 0px;
     		font-size: 2.5vw;
+			width: 80vw;
 			}
 			.text-box2 {
 			margin: 5vw 0px;
     		font-size: 2.5vw;
+			width: 80vw;
 			}
 			.text-box3 {
 			margin: 5vw 0px;
     		font-size: 2.5vw;
+			width: 80vw;
+			}
+			.bigquote {
+			font-size: 3vw;
+			}
+			.bigname {
+			font-size: 5vw;
 			}
 	</style>
 	
