--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 				width: 80vw;
 				height: 80vw;
 				padding-bottom: 20px;
-				padding-top: 30px;
+				padding-top: 33px;
 			}
 			#intro-para {
 				font-size: 2.5em;
@@ -364,12 +364,15 @@
 			}
 			#quote-flex1 {
 			background-image: none;
+			background-color: #BDBDBD;
 			}
 			#quote-flex2 {
 			background-image: none;
+			background-color: #BDBDBD;
 			}
 			#quote-flex3 {
 			background-image: none;
+			background-color: #BDBDBD;
 			}
 			.text-box {
 			margin: 5vw 0px;
@@ -391,6 +394,9 @@
 			}
 			.bigname {
 			font-size: 5vw;
+			}
+			#system {
+			margin-bottom: 0vh;
 			}
 	</style>
 	
