Mobile background tweaks

--- a/index.html
+++ b/index.html
@@ -364,15 +364,15 @@
 			}
 			#quote-flex1 {
 			background-image: none;
-			background-color: #BDBDBD;
+			background-color: #F3F3F3;
 			}
 			#quote-flex2 {
 			background-image: none;
-			background-color: #BDBDBD;
+			background-color: #F3F3F3;
 			}
 			#quote-flex3 {
 			background-image: none;
-			background-color: #BDBDBD;
+			background-color: #F3F3F3;
 			}
 			.text-box {
 			margin: 5vw 0px;
@@ -397,7 +397,12 @@
 			}
 			#system {
 			margin-bottom: 0vh;
+			background-color: #F3F3F3;
 			}
+			#line {
+			width: 100vw;
+			}
+		}
 	</style>
 	
 	
